// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileSlots — determinism + snapshot suite > all four geographic fields combined as ordinary filters 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
PREFIX georeference: <https://w3id.org/ascs-ev/envited-x/georeference/v5/>
SELECT ?asset ?name ?city ?country ?region ?state WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec hdmap:hasGeoreference ?_d0_1 .
  ?_d0_1 georeference:hasProjectLocation ?_d0_2 .
  ?_d0_2 georeference:city ?city .
  ?_d0_2 georeference:country ?country .
  ?_d0_2 georeference:region ?region .
  ?_d0_2 georeference:state ?state .
  FILTER(?city = "Munich")
  FILTER(?country = "DE")
  FILTER(?region = "Oberbayern")
  FILTER(?state = "Bavaria")
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > country filter — multi-value array (FILTER IN matching) 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
PREFIX georeference: <https://w3id.org/ascs-ev/envited-x/georeference/v5/>
SELECT ?asset ?name ?country WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec hdmap:hasGeoreference ?_d0_1 .
  ?_d0_1 georeference:hasProjectLocation ?_d0_2 .
  ?_d0_2 georeference:country ?country .
  FILTER(?country IN ("DE", "FR", "IT"))
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > country filter — single value 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
PREFIX georeference: <https://w3id.org/ascs-ev/envited-x/georeference/v5/>
SELECT ?asset ?name ?country WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec hdmap:hasGeoreference ?_d0_1 .
  ?_d0_1 georeference:hasProjectLocation ?_d0_2 .
  ?_d0_2 georeference:country ?country .
  FILTER(?country = "DE")
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > country filter — single-element array collapses to FILTER IN of one 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
PREFIX georeference: <https://w3id.org/ascs-ev/envited-x/georeference/v5/>
SELECT ?asset ?name ?country WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec hdmap:hasGeoreference ?_d0_1 .
  ?_d0_1 georeference:hasProjectLocation ?_d0_2 .
  ?_d0_2 georeference:country ?country .
  FILTER(?country = "DE")
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > drops an unknown filter key and still emits a deterministic query 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > drops an unknown range key and still emits a deterministic query 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > empty slots for hdmap 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > empty slots for ositrace 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX ositrace: <https://w3id.org/ascs-ev/envited-x/ositrace/v6/>
SELECT ?asset ?name WHERE {
  ?asset a ositrace:OSITrace ;
    rdfs:label ?name .
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > empty slots for scenario 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX scenario: <https://w3id.org/ascs-ev/envited-x/scenario/v6/>
SELECT ?asset ?name WHERE {
  ?asset a scenario:Scenario ;
    rdfs:label ?name .
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > empty slots with no domain → cross-domain query 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
SELECT ?asset ?name WHERE {
  VALUES ?assetClass { <https://w3id.org/gaia-x4plcaad/ontologies/automotive-simulator/v2/AutomotiveSimulator> <https://w3id.org/ascs-ev/envited-x/environment-model/v5/EnvironmentModel> <https://w3id.org/ascs-ev/envited-x/hdmap/v6/HdMap> <https://w3id.org/gaia-x4plcaad/ontologies/leakage-test/v3/LeakageTest> <https://w3id.org/ascs-ev/envited-x/ositrace/v6/OSITrace> <https://w3id.org/ascs-ev/envited-x/scenario/v6/Scenario> <https://w3id.org/gaia-x4plcaad/ontologies/service/v2/Service> <https://w3id.org/gaia-x4plcaad/ontologies/simulated-sensor/v2/SimulatedSensor> <https://w3id.org/gaia-x4plcaad/ontologies/simulation-model/v3/SimulationModel> <https://w3id.org/ascs-ev/envited-x/surface-model/v6/SurfaceModel> <https://w3id.org/gaia-x4plcaad/ontologies/survey/v6/SurveyResultDataOffering> <https://w3id.org/ascs-ev/envited-x/tzip21/v1/Asset> <https://w3id.org/gaia-x4plcaad/ontologies/vv-report/v2/VvReport> }
  ?asset a ?assetClass ;
    rdfs:label ?name .
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > hdmap Format-group filter (formatType) 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name ?formatType WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec hdmap:hasFormat ?format .
  ?format hdmap:formatType ?formatType .
  FILTER(?formatType = "ASAM OpenDRIVE")
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > hdmap multi-value Content filter (roadTypes IN motorway, urban) 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name ?roadTypes WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec hdmap:hasContent ?content .
  ?content hdmap:roadTypes ?roadTypes .
  FILTER(?roadTypes IN ("motorway", "urban"))
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > hdmap numeric range — both bounds 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name ?numberIntersections WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec hdmap:hasQuantity ?quantity .
  ?quantity hdmap:numberIntersections ?numberIntersections .
  FILTER(xsd:float(?numberIntersections) >= 5)
  FILTER(xsd:float(?numberIntersections) <= 50)
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > hdmap numeric range — lower bound only 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name ?numberIntersections WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec hdmap:hasQuantity ?quantity .
  ?quantity hdmap:numberIntersections ?numberIntersections .
  FILTER(xsd:float(?numberIntersections) >= 5)
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > hdmap numeric range — upper bound only 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name ?numberIntersections WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec hdmap:hasQuantity ?quantity .
  ?quantity hdmap:numberIntersections ?numberIntersections .
  FILTER(xsd:float(?numberIntersections) <= 50)
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > hdmap single-value Content filter (roadTypes=motorway) 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name ?roadTypes WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec hdmap:hasContent ?content .
  ?content hdmap:roadTypes ?roadTypes .
  FILTER(?roadTypes = "motorway")
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > hdmap two ranges in different shape groups 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name ?numberIntersections ?numberTrafficLights WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec hdmap:hasQuantity ?quantity .
  ?quantity hdmap:numberIntersections ?numberIntersections .
  ?quantity hdmap:numberTrafficLights ?numberTrafficLights .
  FILTER(xsd:float(?numberIntersections) >= 5)
  FILTER(xsd:float(?numberTrafficLights) <= 100)
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > hdmap two-property filter (roadTypes + laneTypes) 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name ?roadTypes ?laneTypes WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec hdmap:hasContent ?content .
  ?content hdmap:roadTypes ?roadTypes .
  ?content hdmap:laneTypes ?laneTypes .
  FILTER(?roadTypes = "motorway")
  FILTER(?laneTypes = "driving")
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > hdmap with filter + range + country + license combined 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
PREFIX envited-x: <https://w3id.org/ascs-ev/envited-x/envited-x/v3/>
PREFIX georeference: <https://w3id.org/ascs-ev/envited-x/georeference/v5/>
SELECT ?asset ?name ?roadTypes ?license ?numberIntersections ?country WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec hdmap:hasContent ?content .
  ?content hdmap:roadTypes ?roadTypes .
  ?domSpec envited-x:hasQuality ?quality_envited_x .
  ?quality_envited_x envited-x:license ?license .
  ?domSpec hdmap:hasQuantity ?quantity .
  ?quantity hdmap:numberIntersections ?numberIntersections .
  ?domSpec hdmap:hasGeoreference ?_d0_1 .
  ?_d0_1 georeference:hasProjectLocation ?_d0_2 .
  ?_d0_2 georeference:country ?country .
  FILTER(?roadTypes = "motorway")
  FILTER(?license = "CC-BY-4.0")
  FILTER(xsd:float(?numberIntersections) >= 5)
  FILTER(xsd:float(?numberIntersections) <= 50)
  FILTER(?country = "DE")
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > license combined with content filter 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
PREFIX envited-x: <https://w3id.org/ascs-ev/envited-x/envited-x/v3/>
SELECT ?asset ?name ?roadTypes ?license WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec hdmap:hasContent ?content .
  ?content hdmap:roadTypes ?roadTypes .
  ?domSpec envited-x:hasQuality ?quality_envited_x .
  ?quality_envited_x envited-x:license ?license .
  FILTER(?roadTypes = "motorway")
  FILTER(?license = "CC-BY-4.0")
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > license filter only 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
PREFIX envited-x: <https://w3id.org/ascs-ev/envited-x/envited-x/v3/>
SELECT ?asset ?name ?license WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec envited-x:hasQuality ?quality_envited_x .
  ?quality_envited_x envited-x:license ?license .
  FILTER(?license = "CC-BY-4.0")
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > multiple references (ositrace + hdmap) → two AND-combined JOINs, both projected 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX scenario: <https://w3id.org/ascs-ev/envited-x/scenario/v6/>
PREFIX manifest: <https://w3id.org/ascs-ev/envited-x/manifest/v5/>
PREFIX ositrace: <https://w3id.org/ascs-ev/envited-x/ositrace/v6/>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name ?refAsset ?refName ?ref_step_1 ?ref_step_2 ?refAsset1 ?refName1 ?ref1_step_1 ?ref1_step_2 WHERE {
  { SELECT DISTINCT ?asset WHERE {
  ?asset a scenario:Scenario ;
    rdfs:label ?name .
  ?asset scenario:hasManifest ?ref_step_1 .
  ?ref_step_1 manifest:hasReferencedArtifacts ?ref_step_2 .
  ?ref_step_2 manifest:iri ?refAsset .
  ?refAsset a ositrace:OSITrace .
  ?refAsset rdfs:label ?refName .
  ?asset scenario:hasManifest ?ref1_step_1 .
  ?ref1_step_1 manifest:hasReferencedArtifacts ?ref1_step_2 .
  ?ref1_step_2 manifest:iri ?refAsset1 .
  ?refAsset1 a hdmap:HdMap .
  ?refAsset1 rdfs:label ?refName1 .
  } LIMIT 100 }
  ?asset a scenario:Scenario ;
    rdfs:label ?name .
  ?asset scenario:hasManifest ?ref_step_1 .
  ?ref_step_1 manifest:hasReferencedArtifacts ?ref_step_2 .
  ?ref_step_2 manifest:iri ?refAsset .
  ?refAsset a ositrace:OSITrace .
  ?refAsset rdfs:label ?refName .
  ?asset scenario:hasManifest ?ref1_step_1 .
  ?ref1_step_1 manifest:hasReferencedArtifacts ?ref1_step_2 .
  ?ref1_step_2 manifest:iri ?refAsset1 .
  ?refAsset1 a hdmap:HdMap .
  ?refAsset1 rdfs:label ?refName1 .
}
LIMIT 500"
`;

exports[`compileSlots — determinism + snapshot suite > nested reference (scenario → trace → map) chains the JOIN through the trace 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX scenario: <https://w3id.org/ascs-ev/envited-x/scenario/v6/>
PREFIX manifest: <https://w3id.org/ascs-ev/envited-x/manifest/v5/>
PREFIX ositrace: <https://w3id.org/ascs-ev/envited-x/ositrace/v6/>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name ?refAsset ?refName ?ref_step_1 ?ref_step_2 ?refAsset_0 ?refName_0 ?ref_0_step_1 ?ref_0_step_2 WHERE {
  { SELECT DISTINCT ?asset WHERE {
  ?asset a scenario:Scenario ;
    rdfs:label ?name .
  ?asset scenario:hasManifest ?ref_step_1 .
  ?ref_step_1 manifest:hasReferencedArtifacts ?ref_step_2 .
  ?ref_step_2 manifest:iri ?refAsset .
  ?refAsset a ositrace:OSITrace .
  ?refAsset rdfs:label ?refName .
  ?refAsset ositrace:hasManifest ?ref_0_step_1 .
  ?ref_0_step_1 manifest:hasReferencedArtifacts ?ref_0_step_2 .
  ?ref_0_step_2 manifest:iri ?refAsset_0 .
  ?refAsset_0 a hdmap:HdMap .
  ?refAsset_0 rdfs:label ?refName_0 .
  } LIMIT 100 }
  ?asset a scenario:Scenario ;
    rdfs:label ?name .
  ?asset scenario:hasManifest ?ref_step_1 .
  ?ref_step_1 manifest:hasReferencedArtifacts ?ref_step_2 .
  ?ref_step_2 manifest:iri ?refAsset .
  ?refAsset a ositrace:OSITrace .
  ?refAsset rdfs:label ?refName .
  ?refAsset ositrace:hasManifest ?ref_0_step_1 .
  ?ref_0_step_1 manifest:hasReferencedArtifacts ?ref_0_step_2 .
  ?ref_0_step_2 manifest:iri ?refAsset_0 .
  ?refAsset_0 a hdmap:HdMap .
  ?refAsset_0 rdfs:label ?refName_0 .
}
LIMIT 500"
`;

exports[`compileSlots — determinism + snapshot suite > peer domains (hdmap + ositrace) with country filter → UNION 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
PREFIX georeference: <https://w3id.org/ascs-ev/envited-x/georeference/v5/>
PREFIX ositrace: <https://w3id.org/ascs-ev/envited-x/ositrace/v6/>
SELECT ?asset ?name ?roadTypes ?country WHERE {
    {
    ?asset a hdmap:HdMap ;
      rdfs:label ?name .
    ?asset hdmap:hasDomainSpecification ?domSpec .
    ?domSpec hdmap:hasContent ?content .
    ?content hdmap:roadTypes ?roadTypes .
    ?domSpec hdmap:hasGeoreference ?_d0_1 .
    ?_d0_1 georeference:hasProjectLocation ?_d0_2 .
    ?_d0_2 georeference:country ?country .
    FILTER(?roadTypes = "motorway")
    FILTER(?country = "FR")
  }
  UNION
  {
    ?asset a ositrace:OSITrace ;
      rdfs:label ?name .
    ?asset ositrace:hasDomainSpecification ?domSpec .
    ?domSpec ositrace:hasContent ?content .
    ?content ositrace:roadTypes ?roadTypes .
    ?domSpec ositrace:hasGeoreference ?_d0_1 .
    ?_d0_1 georeference:hasProjectLocation ?_d0_2 .
    ?_d0_2 georeference:country ?country .
    FILTER(?roadTypes = "motorway")
    FILTER(?country = "FR")
  }
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > peer domains (hdmap + ositrace) with shared roadTypes → UNION 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
PREFIX ositrace: <https://w3id.org/ascs-ev/envited-x/ositrace/v6/>
SELECT ?asset ?name ?roadTypes WHERE {
    {
    ?asset a hdmap:HdMap ;
      rdfs:label ?name .
    ?asset hdmap:hasDomainSpecification ?domSpec .
    ?domSpec hdmap:hasContent ?content .
    ?content hdmap:roadTypes ?roadTypes .
    FILTER(?roadTypes = "motorway")
  }
  UNION
  {
    ?asset a ositrace:OSITrace ;
      rdfs:label ?name .
    ?asset ositrace:hasDomainSpecification ?domSpec .
    ?domSpec ositrace:hasContent ?content .
    ?content ositrace:roadTypes ?roadTypes .
    FILTER(?roadTypes = "motorway")
  }
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > routes a non-legacy shape group through the discovered link predicate 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name ?accuracySignals WHERE {
  ?asset a hdmap:HdMap ;
    rdfs:label ?name .
  ?asset hdmap:hasDomainSpecification ?domSpec .
  ?domSpec hdmap:hasQuality ?quality .
  ?quality hdmap:accuracySignals ?accuracySignals .
  FILTER(?accuracySignals = "0.1")
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > scenario + hdmap cross-domain (primary scenario references hdmap) 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX scenario: <https://w3id.org/ascs-ev/envited-x/scenario/v6/>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name ?scenarioCategory WHERE {
  ?asset a scenario:Scenario ;
    rdfs:label ?name .
  ?asset scenario:hasDomainSpecification ?domSpec .
  ?domSpec scenario:hasContent ?content .
  ?content scenario:scenarioCategory ?scenarioCategory .
  FILTER(?scenarioCategory = "urban")
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > scenario + hdmap cross-domain with range on referenced domain 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX scenario: <https://w3id.org/ascs-ev/envited-x/scenario/v6/>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name ?scenarioCategory WHERE {
  ?asset a scenario:Scenario ;
    rdfs:label ?name .
  ?asset scenario:hasDomainSpecification ?domSpec .
  ?domSpec scenario:hasContent ?content .
  ?content scenario:scenarioCategory ?scenarioCategory .
  FILTER(?scenarioCategory = "urban")
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > scenario multi-value Content filter (entityTypes IN truck, bicycle) 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX scenario: <https://w3id.org/ascs-ev/envited-x/scenario/v6/>
SELECT ?asset ?name ?entityTypes WHERE {
  ?asset a scenario:Scenario ;
    rdfs:label ?name .
  ?asset scenario:hasDomainSpecification ?domSpec .
  ?domSpec scenario:hasContent ?content .
  ?content scenario:entityTypes ?entityTypes .
  FILTER(?entityTypes IN ("truck", "bicycle"))
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > scenario single Content filter (scenarioCategory) 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX scenario: <https://w3id.org/ascs-ev/envited-x/scenario/v6/>
SELECT ?asset ?name ?scenarioCategory WHERE {
  ?asset a scenario:Scenario ;
    rdfs:label ?name .
  ?asset scenario:hasDomainSpecification ?domSpec .
  ?domSpec scenario:hasContent ?content .
  ?content scenario:scenarioCategory ?scenarioCategory .
  FILTER(?scenarioCategory = "urban")
}
LIMIT 100"
`;

exports[`compileSlots — determinism + snapshot suite > single reference → distinct-asset-limited JOIN 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX gx: <https://w3id.org/gaia-x/development#>
PREFIX ositrace: <https://w3id.org/ascs-ev/envited-x/ositrace/v6/>
PREFIX manifest: <https://w3id.org/ascs-ev/envited-x/manifest/v5/>
PREFIX hdmap: <https://w3id.org/ascs-ev/envited-x/hdmap/v6/>
SELECT ?asset ?name ?refAsset ?refName ?ref_step_1 ?ref_step_2 WHERE {
  { SELECT DISTINCT ?asset WHERE {
  ?asset a ositrace:OSITrace ;
    rdfs:label ?name .
  ?asset ositrace:hasManifest ?ref_step_1 .
  ?ref_step_1 manifest:hasReferencedArtifacts ?ref_step_2 .
  ?ref_step_2 manifest:iri ?refAsset .
  ?refAsset a hdmap:HdMap .
  ?refAsset rdfs:label ?refName .
  } LIMIT 100 }
  ?asset a ositrace:OSITrace ;
    rdfs:label ?name .
  ?asset ositrace:hasManifest ?ref_step_1 .
  ?ref_step_1 manifest:hasReferencedArtifacts ?ref_step_2 .
  ?ref_step_2 manifest:iri ?refAsset .
  ?refAsset a hdmap:HdMap .
  ?refAsset rdfs:label ?refName .
}
LIMIT 500"
`;
